force-app/main/default/objects/CollaboratorContract__c/CollaboratorContract__c.object-meta.xml
<CustomObject>
    <description>Objet permettant de définir un ou plusieurs contrat pour un collaborateur de K par K</description>
    <label>Contrat collaborateur</label>
    <nameField>
        <displayFormat>JOB/{YYYY}/{0000000}</displayFormat>
        <label>Numéro de contrat</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrats collaborateurs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>