force-app/main/default/objects/CollaboratorContract__c/fields/assignedTo__c.field-meta.xml
<CustomField>
    <fullName>assignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Site physique d&apos;affectation contractuelle du collaborateur (ex: un DO sera employé par une DO mais affecté contractuellement à un dépôt ou un magasin)</inlineHelpText>
    <label>Affecté à</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats collaborateurs (Affecté à)</relationshipLabel>
    <relationshipName>assignedTo</relationshipName>
    <type>Lookup</type>
</CustomField>