force-app/main/default/objects/CollaboratorContract__c/fields/collaborator__c.field-meta.xml
<CustomField>
    <fullName>collaborator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Collaborateur</label>
    <referenceTo>Collaborator__c</referenceTo>
    <relationshipLabel>Contrats collaborateurs</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>