force-app/main/default/objects/CollaboratorContract__c/fields/employedBy__c.field-meta.xml
<CustomField>
    <fullName>employedBy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Entité hiérarchique d&apos;affectation du collaborateur (ex: un DO sera employé par une DO mais affecté contractuellement à un dépôt ou un magasin)</inlineHelpText>
    <label>Employé par</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats collaborateurs (Employé par)</relationshipLabel>
    <relationshipName>employedBy</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>