force-app/main/default/objects/CollaboratorContract__c/fields/job__c.field-meta.xml
<CustomField>
    <fullName>job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Métier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Job</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Contrats collaborateurs</relationshipLabel>
    <relationshipName>CollaboratorContracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>