force-app/main/default/objects/CollaboratorContract__c/fields/signatureDate__c.field-meta.xml
<CustomField>
    <fullName>signatureDate__c</fullName>
    <label>Date de signature</label>
    <type>Date</type>
</CustomField>