force-app/main/default/objects/CollaboratorContract__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDI</fullName>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>CTT</fullName>
            </value>
            <value>
                <fullName>CUI</fullName>
            </value>
            <value>
                <fullName>CAE</fullName>
            </value>
            <value>
                <fullName>CIE</fullName>
            </value>
            <value>
                <fullName>Contrat d&apos;apprentissage</fullName>
            </value>
            <value>
                <fullName>Contrat de professionnalisation</fullName>
            </value>
            <value>
                <fullName>Contrat de prestation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>