force-app/main/default/objects/CollaboratorContract__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>Contrat de travail d&apos;un collaborateur</description>
    <label>Contrat</label>
</RecordType>