force-app/main/default/objects/CollaboratorContract__c/recordTypes/EngagementLetter.recordType-meta.xml
<RecordType>
    <fullName>EngagementLetter</fullName>
    <active>true</active>
    <description>Contrat spécifique à une mission différente du contrat pour un collaborateur</description>
    <label>Lettre de mission</label>
</RecordType>