force-app/main/default/objects/CollaboratorContract__c/validationRules/VR_K3_CollabContract_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CollabContract_EndDate</fullName>
    <active>true</active>
    <description>Date de fin de contrat invalide (doit être supérieure ou égale à la date de début de contrat)</description>
    <errorConditionFormula>!$User.ByPassValidationRule__c &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
!ISBLANK(endDate__c) &amp;&amp;
endDate__c &lt; signatureDate__c</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>Date de fin de contrat invalide (doit être supérieure ou égale à la date de début de contrat)!</errorMessage>
</ValidationRule>