force-app/main/default/objects/CollaboratorContract__c/validationRules/VR_K3_CollabContract_EndDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CollabContract_EndDateRequired</fullName>
    <active>true</active>
    <description>Une lettre de mission doit obligatoirement avoir une date de fin</description>
    <errorConditionFormula>!$User.ByPassValidationRule__c &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName == &apos;EngagementLetter&apos; &amp;&amp;
ISNULL(endDate__c)</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>Date de fin obligatoire pour les lettres de mission!</errorMessage>
</ValidationRule>