force-app/main/default/objects/CollaboratorContract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>collaborator__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>assignedTo__c</columns>
    <columns>job__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>